automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,13 @@
     }
    ],
    "source": [
-    "\n"
+    "import plotly\n",
+    "\n",
+    "plotly.offline.init_notebook_mode(connected=True)\n",
+    "trace0 = {'type': 'bar', 'x': ['jack', 'jill', 'sandy'], 'y': [8, 11, 10]}\n",
+    "\n",
+    "\n",
+    "plotly.offline.iplot([trace0])"
    ]
   },
   {
